# BTPlayer

./: .gitignore  test.torrent  tool.sh
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MACRO.h  native-lib.cpp  tools.c  tools.h
app/src/main/java/com/zq/btplayer/: MainActivity.java
app/src/main/java/com/zq/common/: MyConfig.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
